# MemoryPoolsAllocator

./: CMakeLists.txt  Research.md
lib/: CMakeLists.txt  MemoryPoolsAllocator.cpp  MemoryPoolsAllocator.h
tests/: CMakeLists.txt  allocatorsTests.cpp
